--- a/Personal_website/index.html
+++ b/Personal_website/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title> Arjita's Personal Website </title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <hr size="5">
   <table cellspacing="40">
     <tr>
       <th><img src="images/arjitapp.png" alt="Arjita Profile pic" height="200px"></th>
