--- a/Personal_website/contact.html
+++ b/Personal_website/contact.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Me</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <h1>Contact</h1>
-  <h4>Arjita Agrawal</h4>
+<body style="text-align: center;">
+  <h1 align="center">Contact</h1>
+  <hr size="2">
+  <h2>Arjita Agrawal</h2>
   <p><strong>Address:</strong>Bengaluru, Karnataka(562157)</p>
   <p><strong>Mob:</strong>8197298835</p>
   <p><strong>Email:</strong>agrawalarjita07@gmail.com</p>
@@ -20,3 +22,5 @@
     <textarea name="yourMessgae" rows="18" cols="30"></textarea><br>
     <input type="submit" name="">
   </form>
+  </body>
+</html>
